--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-csslint": "^0.2.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-recess": "^1.2.0",
     "gulp-sass": "^2.1.0"
+  },
+  "dependencies": {
+    "imagemin-pngquant": "^4.2.0"
   }
 }
